@@ -4,32 +4,25 @@ import com.intellij.openapi.application.WriteAction;
 import com.intellij.openapi.projectRoots.Sdk;
 import com.intellij.openapi.projectRoots.impl.ProjectJdkImpl;
 import com.intellij.openapi.projectRoots.impl.SdkConfigurationUtil;
+import com.intellij.openapi.vfs.VirtualFile;
 import com.jetbrains.python.sdk.PythonSdkType;
+import rw.ai.tests.PythonTestUtil;
+import rw.ai.tests.fixtures.PythonMockSdk;
 import rw.util.OsType;
 
 import java.io.File;
 
 
 public class SdkFixture {
-    protected File projectRoot;
-    protected File venvDir;
-    protected File sdkHome;
     protected Sdk sdk;
     protected String version;
 
-    public SdkFixture(File projectRoot, String version) {
-        this.projectRoot = projectRoot;
+    public SdkFixture(String version) {
         this.version = version;
     }
 
     public void start() throws Exception {
-        // Create sdk
-        this.venvDir = new File(this.projectRoot.toString(), String.format(".venv%s-%s", this.version, OsType.DETECTED));
-        this.sdkHome = new File(this.venvDir, "/bin/python");
-        new File(this.sdkHome.getParent()).mkdirs();
-        this.sdkHome.createNewFile();
-        this.sdk = new ProjectJdkImpl("cakeshop", PythonSdkType.getInstance(), this.sdkHome.toString(),
-                String.format("Python %s", this.version));
+        this.sdk = PythonMockSdk.create(PythonTestUtil.getTestDataPath() + "/" + "python-%s".formatted(this.version));
         WriteAction.runAndWait(() -> SdkConfigurationUtil.addSdk(this.sdk));
     }
 
@@ -39,9 +32,5 @@ public class SdkFixture {
 
     public Sdk getSdk() {
         return this.sdk;
-    }
-
-    public File getSdkHome() {
-        return this.sdkHome;
     }
 }
